--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,7 +1,14 @@
 .app-container {
   display: flex;
-  flex-direction: column;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  -ms-box-orient: horizontal;
   justify-content: space-between;
+  -webkit-justify-content: space-between;
+  flex-direction: column;
   height: 100%;
   min-height: 100vh;
   background-color: #222222;
