--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,14 @@
 .navbar-container {
   display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
   flex-direction: row;
+  -ms-box-orient: space-between;
   justify-content: space-between;
+  -webkit-justify-content: space-between;
   align-items: center;
   padding-left: 0px;
 }
@@ -11,8 +18,15 @@
   align-self: center;
   list-style-type: none;
   display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
   flex-direction: row;
+  -ms-box-orient: space-evenly;
   justify-content: space-evenly;
+  -webkit-justify-content: space-evenly;
   flex-basis: 0;
   flex-grow: 1;
 }
