--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -37,6 +37,22 @@
   color: white;
 }
 
+.carousel-next:before, .carousel-prev:before {
+  background-image: none;
+  color: #FFFFFF;
+  font-size: 18px;
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.carousel-prev:before {
+  content: "↩";
+}
+
+.carousel-next:before {
+  content: "↪";
+}
+
 $backgrounds: (
   #00000c,
   linear-gradient(to bottom, #020111 85%, #191621 100%),
@@ -197,45 +213,27 @@ $backgrounds: (
   z-index: 100;
 }
 .drop {
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.4) 50%);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 50%);
   background: -webkit-gradient(
     linear,
     0% 0%,
     0% 100%,
-    from(rgba(255, 255, 255, 0.1)),
-    to(rgba(255, 255, 255, 0.6))
+    from(rgba(255, 255, 255, 0)),
+    to(rgba(255, 255, 255, 0.3))
   );
   background: -moz-linear-gradient(
     top,
-    rgba(255, 255, 255, 0.1) 0%,
-    rgba(255, 255, 255, 0.6) 100%
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.3) 100%
   );
   width: 1px;
   height: 90px;
   position: fixed;
   bottom: 200px;
-  animation: fall 0.65s linear infinite;
-  -webkit-animation: fall 0.65s linear infinite;
-  -moz-animation: fall 0.65s linear infinite;
+  animation: RainFall 0.65s linear infinite;
+  -webkit-animation: RainFall 0.65s linear infinite;
+  -moz-animation: RainFall 0.65s linear infinite;
   z-index: 100;
-}
-
-// Animate raindrops
-
-@keyframes fall {
-  to {
-    margin-top: 900px;
-  }
-}
-@-webkit-keyframes fall {
-  to {
-    margin-top: 900px;
-  }
-}
-@-moz-keyframes fall {
-  to {
-    margin-top: 900px;
-  }
 }
 
 // Generate stars
@@ -277,13 +275,10 @@ $backgrounds: (
     z-index: 999;
   }
 }
-@keyframes RainDrops {
-  90% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    transform: translateY(100vh);
+
+@keyframes RainFall {
+  to {
+    margin-top: 900px;
   }
 }
 
